syntax = "proto3";
option java_package = "no.nav.dagpenger.inntekt.rpc";
option java_multiple_files = true;

import "SpesifisertInntektAsJson.proto";

service SpesifisertInntektHenter {
    rpc hentSpesifisertInntektAsJson(InntektId) returns (SpesifisertInntektAsJson) {}
}